<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/recipeCard"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/spacingStart">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/recipeTitleEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacingStart"
            android:layout_marginEnd="8dp"
            android:ellipsize="end"
            android:hint="@string/edit_recipe_title"
            android:singleLine="true"
            android:textAppearance="@style/TextAppearance.NeRecipeProject.Text.RecipeCard"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="spread_inside" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/recipeAuthorEdit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:hint="@string/edit_recipe_author"
            android:singleLine="true"
            android:textAppearance="@style/TextAppearance.NeRecipeProject.Text.RecipeCard"
            app:layout_constraintEnd_toEndOf="@id/recipeTitleEdit"
            app:layout_constraintStart_toStartOf="@id/recipeTitleEdit"
            app:layout_constraintTop_toBottomOf="@id/recipeTitleEdit" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/categoryEditMenu"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/category"
            app:layout_constraintEnd_toEndOf="@id/recipeTitleEdit"
            app:layout_constraintStart_toStartOf="@id/recipeTitleEdit"
            app:layout_constraintTop_toBottomOf="@id/recipeAuthorEdit"
            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.MaterialComponents.MaterialCalendar.Day">

            <AutoCompleteTextView
                android:id="@+id/categoryItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textAppearance="@style/TextAppearance.NeRecipeProject.Text.RecipeCard" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycleRecipeEdit"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/spacingStart"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="@id/recipeTitleEdit"
            app:layout_constraintStart_toStartOf="@id/recipeTitleEdit"
            app:layout_constraintTop_toBottomOf="@id/categoryEditMenu" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/newStepButton"
            style="@style/Widget.NeRecipeProjectTheme.NewStepButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacingStart"
            app:icon="@drawable/ic_baseline_add_24"
            app:iconGravity="textStart"
            app:layout_constraintEnd_toEndOf="@id/saveButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/recycleRecipeEdit"
            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.MaterialComponents.MaterialCalendar.Year" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/saveButton"
            style="@style/Widget.NeRecipeProjectTheme.NewStepButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacingStart"
            android:maxHeight="24dp"
            app:icon="@drawable/ic_baseline_save_alt_24"
            app:iconGravity="textStart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/newStepButton"
            app:layout_constraintTop_toBottomOf="@id/recycleRecipeEdit"
            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.MaterialComponents.MaterialCalendar.Year" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>